# corp-project-extractor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  facts_template.yaml  pyproject.toml  tag_registry.yaml
.claude/: settings.local.json
.claude/rules/: python-env.md  testing.md
config/: clients.yaml  default.yaml
docs/archive/: 2026-03-15_CODE_REVIEW_REPORT.md
src/corp_project_extractor/: __init__.py  cke_invoker.py  classifier.py  cli.py  config.py  extractors.py  manifest.py  manifest_generator.py  models.py  renderer.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_manifest_generator.py  test_renderer.py
